<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/cust_app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        android:elevation="15dp"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="25dp"
        android:layout_margin="30dp"
        android:background="@drawable/shape_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shelter_id"
            style="@style/SubTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/shelter_id_enter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/sId"
                android:ems="10"

                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/username"
            style="@style/SubTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/username_enter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/loginUsername"
                android:ems="10"

                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/password"
            style="@style/SubTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password_enter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/loginPassword"
                android:inputType="textPassword"
                android:ems="10"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loginBtn"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:background="@drawable/btn1"
                app:backgroundTint="@null"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/create_btn"
                android:text="@string/contact"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:background="@drawable/btn2"
                app:backgroundTint="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

